--- a/style.css
+++ b/style.css
@@ -155,33 +155,35 @@ a {
   }
 }
 @media only screen and (max-width: 1000px) {
-  body {
-    transform: scale(2); /* Adjust the scale factor as needed */
-    transform-origin: top;
-    width: 50%; /* Keep content within the viewport width */
+  .overlay {
+    padding: 4rem 1rem;
+    max-width: 90%; /* Adjust the width as needed */
     margin: 0 auto; /* Center the content horizontally */
   }
 
-  .overlay {
-    padding: 2rem; /* Adjust padding for smaller screens */
+  .overlay__inner {
+    max-width: 100%;
+    text-align: center;
   }
 
   .overlay__title {
-    font-size: 2.5rem; /* Increase title font size */
-    line-height: 3.5rem;
-    margin-bottom: 1rem;
-  }
-
-  .overlay__description {
-    font-size: 1.25rem; /* Increase description font size */
+    font-size: 1.5rem;
     line-height: 2rem;
     margin-bottom: 1.5rem;
   }
 
+  .overlay__description {
+    font-size: 0.875rem;
+    line-height: 1.5rem;
+    margin-bottom: 2rem;
+  }
+
   .overlay__btn {
-    height: 3rem; /* Increase button height for touch interaction */
-    font-size: 1.25rem; /* Increase button font size */
+    width: 100%;
+    height: 3rem;
+    font-size: 1rem;
     margin-bottom: 1rem;
   }
 }
+
 
