--- a/style.css
+++ b/style.css
@@ -1,3 +1,90 @@
+
+    @import url('https://fonts.googleapis.com/css?family=Roboto:300,500');
+    
+    @color-card-background: #2d3638;
+    @color-tag-background: #191e20;
+    @color-anchor: #e37544;
+    @color-body-copy: #b9bcbd;
+    @default-border-radius: 10px;
+    @breakpoint-medium: "screen and (min-width: 700px)";
+    
+    html, body {
+      background-color: #fff;
+    }
+    
+    .form-popup-bg {
+      position:absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      display: flex;
+      flex-direction: column;
+      align-content: center;
+      justify-content: center;
+    }
+    .form-popup-bg {
+      position: fixed;
+      left: 0;
+      top: 0;
+      height: 100%;
+      width: 100%;
+      background-color: rgba(94, 110, 141, 0.9);
+      opacity: 0;
+      visibility: hidden;
+      -webkit-transition: opacity 0.3s 0s, visibility 0s 0.3s;
+      -moz-transition: opacity 0.3s 0s, visibility 0s 0.3s;
+      transition: opacity 0.3s 0s, visibility 0s 0.3s;
+      overflow-y: auto;
+      z-index: 10000;
+    }
+    .form-popup-bg.is-visible {
+      opacity: 1;
+      visibility: visible;
+      -webkit-transition: opacity 0.3s 0s, visibility 0s 0s;
+      -moz-transition: opacity 0.3s 0s, visibility 0s 0s;
+      transition: opacity 0.3s 0s, visibility 0s 0s;
+    }
+    .form-container {
+        background-color: #2d3638;
+        border-radius: 10px;
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        max-width: 700px;
+        margin-left: auto;
+        margin-right: auto;
+        position:relative;
+      padding: 40px;
+      color: #fff;
+    }
+    .close-button {
+      background:none;
+      color: #fff;
+      width: 40px;
+      height: 40px;
+      position: absolute;
+      top: 0;
+      right: 0;
+      border: solid 1px #fff;
+    }
+    
+    .form-popup-bg:before{
+        content:'';
+        background-color: #fff;
+      opacity: .25;
+      position:absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+    }
+    
+    
+    
+}
+
 :root {
   --dark-color: hsl(var(--hue), 100%, 9%);
   --light-color: hsl(var(--hue), 95%, 98%);
@@ -154,20 +241,19 @@ a {
     padding: 8rem 4rem;
   }
 }
-@media only screen and (max-width: 1000px) {
-  .overlay {
-    padding: 4rem 1rem;
-    max-width: 90%; /* Adjust the width as needed */
-    margin: 0 auto; /* Center the content horizontally */
+
+@media only screen and (max-width: 840px) {
+  body {
+    padding: 1.5rem;
   }
 
-  .overlay__inner {
-    max-width: 100%;
-    text-align: center;
+  .overlay {
+    padding: 4rem;
+    height: auto;
   }
 
   .overlay__title {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     line-height: 2rem;
     margin-bottom: 1.5rem;
   }
@@ -175,15 +261,45 @@ a {
   .overlay__description {
     font-size: 0.875rem;
     line-height: 1.5rem;
-    margin-bottom: 2rem;
-  }
-
-  .overlay__btn {
-    width: 100%;
-    height: 3rem;
-    font-size: 1rem;
-    margin-bottom: 1rem;
+    margin-bottom: 2.5rem;
   }
 }
 
-
+@media only screen and (max-width: 800px)
+.orb-canvas {
+    width: 90%;
+    min-height: 600px;
+}
+  .overlay {
+        padding: 1.5rem;
+      
+    
+      .overlay__inner {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 80vw; /* Use viewport width to make it responsive */
+        height: 80vw; /* Make it a square based on viewport width */
+        padding: 2rem; /* Increase padding for mobile layout */
+    
+        /* Adjust font size and line height for better readability on mobile */
+        font-size: 1.2rem;
+        line-height: 1.5;
+      }
+    
+    
+      .overlay__btns {
+        flex-wrap: wrap;
+      }
+    
+      .overlay__btn {
+        width: 100%;
+        font-size: 0.75rem;
+        margin-right: 0;
+      }
+    
+      .overlay__btn:first-child {
+        margin-bottom: 1rem;
+      }
+    
